<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="be.howest.nmct.TheatreDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:id="@+id/imgDetailTheatre"
        android:src="@drawable/beautifulbanner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TheatreName"
        android:gravity="center"
        android:id="@+id/tvDetailTheatreName"
        android:layout_below="@+id/imgDetailTheatre"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FindOnTheMap"
        android:id="@+id/btnDetailNavigate"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/custom_button"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CurrentMusical"
        android:gravity="center"
        android:id="@+id/tvDetailCurrentMusical"
        android:layout_below="@+id/tvDetailTheatreName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/WhereToFindTheStageDoor"
        android:id="@+id/tvDetailLabelStageDoor"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tvDetailCurrentMusical"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Routebeschrijving"
        android:id="@+id/tvDetailStageDoor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tvDetailLabelStageDoor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AddressOfTheTheatre"
        android:layout_marginTop="10dp"
        android:id="@+id/tvDetailLabelAddress"
        android:layout_below="@+id/tvDetailStageDoor"
        android:layout_alignStart="@+id/tvDetailStageDoor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddressOfTheTheatre"
        android:id="@+id/tvDetailAddress"
        android:layout_below="@+id/tvDetailLabelAddress"
        android:layout_alignStart="@+id/tvDetailLabelAddress" />

</RelativeLayout>
